<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Watering Can</string>

    <!-- EditActivity text, buttons, and hints -->
    <string name="name">Name is </string>
    <string name="start_date">Last watered on </string>
    <string name="interval">Water every </string>
    <string name="days">days</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="name_hint">Name of plant</string>
    <string name="date_hint">Date of watering</string>
    <string name="interval_hint"> X </string>

    <!-- Image descriptions -->
    <string name="flower_border_description">Flower border for aesthetics</string>
    <string name="sched_icon_description">The icon for a Plant Schedule</string>

    <!-- Notification Channel name and description -->
    <string name="channel_name">WateringCanChannel</string>
    <string name="channel_description">Notify user a plant needs watering</string>

    <!-- Debug activity text -->
    <string name="debug">Debug</string>
    <string name="debug_version">Version is %1$s</string>
    <string name="debug_next">Alarm will run at %1$s</string>
    <string name="debug_last">Alarm last ran at %1$s</string>

    <!-- Settings menu and preference keys, text, defaults -->
    <string name="action_settings">Settings</string>
    <string name="pref_notify">Notifications</string>
    <string name="pref_notify_key">pref_notify</string>
    <string name="pref_notify_summ">Display a reminder notification when plants should be watered</string>
    <string name="pref_time">Day\'s First Reminder Time</string>
    <string name="pref_time_key">pref_time</string>
    <string name="pref_time_summ">When to start displaying notifications</string>
    <string name="pref_time_default">6:30</string>
    <string name="pref_freq">Reminder Frequency</string>
    <string name="pref_freq_key">pref_freq</string>
    <string name="pref_freq_summ">How often to display notifications</string>
    <string name="pref_freq_default">12</string>
    <string name="title_activity_settings">Settings</string>

</resources>
